Environment/k3d/k8s/Monitoring/Metrics/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: system-monitoring-metrics
  labels:
    system: Monitoring
    monitoring: Metrics
