Environment/k3d/k8s/Monitoring/Metrics/prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: system-monitoring-metrics
  name: prometheus
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Prometheus
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Metrics
      service: Prometheus
  replicas: 1
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Metrics
        service: Prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: quay.io/prometheus/prometheus:v2.24.0
          imagePullPolicy: IfNotPresent
          args:
            - --log.level=debug
            - --config.file=/etc/prometheus/config.yml
            - --storage.tsdb.retention.time=2h
            - --web.listen-address=:8080
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
          ports:
            - name: http-metrics
              containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http-metrics
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /-/ready
              port: http-metrics
            initialDelaySeconds: 45
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: prometheus
