Environment/k3d/k8s/Monitoring/Metrics/distributor.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-metrics
  name: distributor
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Distributor
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
    - port: 8090
      name: remote-write
      targetPort: remote-write
  selector:
    system: Monitoring
    monitoring: Metrics
    service: Distributor

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: system-monitoring-metrics
  name: distributor
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Distributor
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Metrics
      service: Distributor
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Metrics
        service: Distributor
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - distributor
      containers:
        - name: distributor
          image: quay.io/cortexproject/cortex:v1.6.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=distributor
            - -log.level=debug
            - -config.file=/etc/cortex/distributor.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/cortex
          ports:
            - name: http-metrics
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
        - name: proxy
          image: nginx:1.19.6
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - name: remote-write
              containerPort: 8090
          # securityContext:
          #   readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /ready
              port: remote-write
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /ready
              port: remote-write
            initialDelaySeconds: 45
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: distributor
