Environment/k3d/k8s/Monitoring/Metrics/ingester.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-metrics
  name: ingester
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Ingester
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
    - port: 7946
      name: memberlist
      targetPort: memberlist
  clusterIP: None
  selector:
    system: Monitoring
    monitoring: Metrics
    service: Ingester

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: system-monitoring-metrics
  name: ingester
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Ingester
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Metrics
      service: Ingester
  serviceName: ingester
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Metrics
        service: Ingester
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - ingester
      containers:
        - name: ingester
          image: quay.io/cortexproject/cortex:v1.6.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=ingester
            - -log.level=debug
            - -config.file=/etc/cortex/ingester.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/cortex
          ports:
            - name: http-metrics
              containerPort: 8080
            - name: memberlist
              containerPort: 7946
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 1
            periodSeconds: 30
            failureThreshold: 20
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
      volumes:
        - name: config
          configMap:
            name: ingester
