Environment/k3d/k8s/Monitoring/Metrics/kube-state-metrics.yml
# Based on https://github.com/kubernetes/kube-state-metrics/tree/master/examples/standard
---
apiVersion: v1
kind: Service
metadata:
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Kube-State-Metrics
  name: kube-state-metrics
  namespace: system-monitoring-metrics
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 8080
      targetPort: http-metrics
    - name: telemetry
      port: 8081
      targetPort: telemetry
  selector:
    system: Monitoring
    monitoring: Metrics
    service: Kube-State-Metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Kube-State-Metrics
  name: kube-state-metrics
  namespace: system-monitoring-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Metrics
      service: Kube-State-Metrics
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Metrics
        service: Kube-State-Metrics
    spec:
      containers:
        - image: k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.2.4
          args:
            [
              "--metric-labels-allowlist=pods=[tenant,application,environment,microservice,system,infrastructure,service],deployments=[tenant,application,environment,microservice,system,infrastructure,service]",
            ]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
          name: kube-state-metrics
          ports:
            - containerPort: 8080
              name: http-metrics
            - containerPort: 8081
              name: telemetry
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 5
          securityContext:
            runAsUser: 65534
          resources:
            limits:
              cpu: 20m
              memory: 250Mi
      serviceAccountName: kube-state-metrics
