Environment/k3d/k8s/Monitoring/Metrics/querier.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-metrics
  name: querier
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Querier
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
  selector:
    system: Monitoring
    monitoring: Metrics
    service: Querier

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: system-monitoring-metrics
  name: querier
  labels:
    system: Monitoring
    monitoring: Metrics
    service: Querier
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Metrics
      service: Querier
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Metrics
        service: Querier
    spec:
      terminationGracePeriodSeconds: 180
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - querier
      containers:
        - name: querier
          image: quay.io/cortexproject/cortex:v1.6.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=querier
            - -log.level=debug
            - -config.file=/etc/cortex/querier.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/cortex
            - name: tsdb-sync
              mountPath: /data/cortex/tsdb-sync
          ports:
            - name: http-metrics
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: querier
        - name: tsdb-sync
          hostPath:
            path: /data/cortex/tsdb-sync
